--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   local_auth: ^1.1.6
   flutter_snake_navigationbar: ^0.5.0
-
+  random_password_generator: ^0.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -48,7 +48,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - Assets/icons/social/png/
-  #   - images/a_dot_ham.jpeg
+  #   - images/a_dot_ham.jpeg 
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
