--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   local_auth: ^1.1.6
   flutter_snake_navigationbar: ^0.5.0
   random_password_generator: ^0.2.1
+  direct_select: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
