--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   flutter_snake_navigationbar: ^0.5.0
   random_password_generator: ^0.2.1
   direct_select: ^2.0.0
+  mysql1: ^0.19.2
+  email_validator: ^2.0.1
+  awesome_dialog: ^2.1.0
+  flutter_screenutil: ^5.0.0+2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -34,7 +38,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  sqflite:
+  path:
+  path_provider:  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -49,6 +55,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - Assets/icons/social/png/
+    - Assets/img/
   #   - images/a_dot_ham.jpeg 
 
   # An image asset can refer to one or more resolution-specific "variants", see
